app/static/css/style.css
:root {
    --primary-color:#B4E1FF;      
    --secondary-color: #ABB7FF;     
    --accent-color: #FFACE4;      
    --background-light: #F5FFC6;    
    --text-primary: #49438C;       
    --text-secondary: #666666;  
    --text-tertiary: white;   
    --success-color: #C1FF9B;
    --disabled-color: #D9D9D9;
}

body {
    font-family: sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--primary-color); 
    color: var(--text-primary); 
    padding-top: 100px;
    padding-left: 20px; 
    padding-right: 20px;
}

p {
    font-size: 18px;
    line-height: 1.6;
    color: var(--text-primary); 
}  

a {
    color: var(--accent-color); 
}

a:hover {
    color: var(--text-primary); 
}

.log-in-button {
    background-color: transparent;
    border: none;
    padding: 8px 15px;
    border-radius: 5px;
    cursor: pointer;
    color: var(--tertiary-color); 
    font-size: 20px;
    text-decoration: none;
}

.log-in-button:hover {
    color: var(--accent-color); 
}

.sign-up-button {
    background-color: var(--accent-color);
    color: white;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
    border: none;
    border-radius: 100px;
    cursor: pointer; 
    font-size: 20px;
    text-decoration: none;
}   

.button-group {
    display: flex;
    gap: 10px;
    justify-content: center;
    margin-top: 20px;
}

.primary-button {
    background-color: var(--primary-color);
    color: white;
    padding: 12px 25px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
}

.secondary-button {
    background-color: transparent;
    border: 1px solid var(--primary-color); 
    color: var(--primary-color);
    padding: 12px 25px;
    border-radius: 8px;
    cursor: pointer;
}

.main-header {
    background-color: white; 
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    height: 100px;
    /* Fixes header at top of the page - to change this behaviour, delete below styling */
    position: fixed; 
    top: 0; 
    left: 0; 
    width: 100%; 
    z-index: 1000; 
    align-items: center; 
}

.home-button {
    color: var(--tertiary-color);
    text-decoration: none;
}

.home-button:hover {
    color: var(--accent-color);
    text-decoration: none;
}

.stretch-container {
    display: flex;
    justify-content: space-between; 
    align-items: center;   
    padding-left: 20px; 
    padding-right: 20px;
}


.form-container {
    border-radius: 20px; 
    padding: 20px 75px;  
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
    max-width: 800;      
    margin-top: 40px;    
    margin-right: 0px;    
    font-family: sans-serif;
    color: var(--text-tertiary); 
    text-align: center;
    display: flex;
    flex-direction: column;
    min-height: 80vh;
}

.login-form {
    background-color: var(--text-primary);
}

.sign-up-form {
  background-color: var(--accent-color);
}

.form-container .form-header {
    font-size: 50px;
    line-height: 1.2;
    font-weight: 550;
    padding: 20px 0;
    margin-bottom: 20px;
    margin-top: 20px;
}

.form-container .form-label {
  margin-bottom: 5px;
  font-size: 16px;
  text-align: left;
  color: var(--text-tertiary);
  font-weight: bold;
  text-transform: uppercase;
}

.form-input {
  width: 100%;
  padding: 12px;
  border: 2px solid var(--text-tertiary);
  background-color: transparent;
  color: var(--text-tertiary);
  border-radius: 25px;
  margin-bottom: 20px;
  font-size: 16px;
}

.form-input:focus {
  outline: none;
  background-color: var(--text-tertiary);
  box-shadow: 0 0 5px rgba(41, 121, 255, 0.3);
  color: var(--tertiary-color);
}

.error-message {
  color: red;
  font-size: 14px;
}

.form-submit {
  background-color: var(--background-light);
  color: var(--text-primary);
  padding: 12px 50px;
  text-transform: uppercase;
  border: none;
  border-radius: 25px;
  cursor: pointer;
  font-size: 18px;
  transition: background-color 0.3s ease;
  margin-top: 20px;
margin-bottom: 20px;
}

.form-submit:hover {
  background-color: var(--background-light);
}

.form-submit:disabled {
  background-color: var(--disabled-color);
  cursor: not-allowed;
}


/* info-box component */

.info-box {
  background-color: var(--background-light);
  border-radius: 40px;
  padding: 30px;
  width: 280px;
  min-height: 110px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
  text-align:center;
  color: var(--text-primary);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 10px;
}

.info-header { /*contains icon and title on same line*/
  display: flex;
  align-items: center;
  gap: 20px;           
  margin-bottom: 8px;  
}  

.info-box .info-icon { /* img */
  width: 32px;
  height: 32px;
  object-fit: contain;
}

.info-box .info-title {
  font-size: 25px;
  font-weight: 600;
  margin: 0;
}

.info-box .info-description {
  font-size: 16px;
  color: var(--text-secondary);
  margin: 0;
}

.info-container { /* container to line multiple info-boxes */
  display: flex;
  justify-content: center;
  gap: 40px;
  flex-wrap: wrap;
  padding: 40px 0;
}

.large-search-bar {
  background-color: white;
  border: none;
  border-radius: 40px;
  align-items: center;
}

.unit-name-search {
  color: var(--text-primary);
  font-size: 200%;
  border: none;
  outline: none;
  margin: 10px 40px;
}

.uni-search {
  color: var(--primary-color);
  font-size: 150%;
  border: none;
  outline: none;
  margin: 10px 40px;
}

